log
Sun 10 Sep 2023 01:37:36 AM UTC: 
 hashmap.c | 17 +++++++++++++++--
 1 file changed, 15 insertions(+), 2 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:55:8: error: ‘HashMap’ {aka ‘struct HashMap’} has no member named ‘bucket’; did you mean ‘buckets’?
   55 |   map->bucket[indice] = par;
      |        ^~~~~~
      |        buckets
hashmap.c:56:16: error: assignment to ‘long int’ from ‘char * (*)(const char *, int)’ makes integer from pointer without a cast [-Werror=int-conversion]
   56 |   map->current = index;
      |                ^
cc1: all warnings being treated as errors
Compilation failed
6b7bbe0
Sun 10 Sep 2023 01:39:01 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:56:16: error: assignment to ‘long int’ from ‘char * (*)(const char *, int)’ makes integer from pointer without a cast [-Werror=int-conversion]
   56 |   map->current = index;
      |                ^
cc1: all warnings being treated as errors
Compilation failed
515e5e6
Sun 10 Sep 2023 01:39:29 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|5
total_score: 20/70
859818a
Sun 10 Sep 2023 01:43:52 AM UTC: 
 hashmap.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  4|5
total_score: 20/70
4f6ffdd
Sun 10 Sep 2023 01:51:24 AM UTC: 
 hashmap.c | 10 ++++++++--
 1 file changed, 8 insertions(+), 2 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:78:16: error: assignment to ‘Pair **’ from incompatible pointer type ‘Pair *’ [-Werror=incompatible-pointer-types]
   78 |   MAP->buckets = (Pair *) malloc(sizeof(Pair ) * capacity);
      |                ^
cc1: all warnings being treated as errors
Compilation failed
9ba7d18
Sun 10 Sep 2023 01:51:49 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 30/70
3bdf7d7
Sun 10 Sep 2023 01:57:24 AM UTC: 
 hashmap.c | 6 ++++++
 1 file changed, 6 insertions(+)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:80:33: error: ‘EXIT_FAILUR’ undeclared (first use in this function); did you mean ‘EXIT_FAILURE’?
   80 |   if(MAP->buckets == NULL) exit(EXIT_FAILUR);
      |                                 ^~~~~~~~~~~
      |                                 EXIT_FAILURE
hashmap.c:80:33: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
0643d1b
Sun 10 Sep 2023 01:57:33 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 30/70
852aaf3
Sun 10 Sep 2023 02:10:01 AM UTC: 
 hashmap.c | 18 +++++++++++++++++-
 1 file changed, 17 insertions(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘searchMap’:
hashmap.c:102:8: error: unused variable ‘primerIndice’ [-Werror=unused-variable]
  102 |   long primerIndice = indice; // como es circular, si llega al indice inicial entonces significa que no esta.
      |        ^~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
7437ba3
Sun 10 Sep 2023 02:10:30 AM UTC: 
 hashmap.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  5|4
total_score: 30/70
19d9ba4
Sun 10 Sep 2023 02:11:12 AM UTC: 
 hashmap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  8|3
total_score: 40/70
b4c7da4
Sun 10 Sep 2023 02:44:54 AM UTC: 
 hashmap.c | 13 +++++++++++--
 1 file changed, 11 insertions(+), 2 deletions(-)
 tests:  8|3
total_score: 40/70
a0d8740
Sun 10 Sep 2023 02:47:04 AM UTC: 
 hashmap.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  11|2
total_score: 50/70
6b0365c
Sun 10 Sep 2023 03:18:46 AM UTC: 
 hashmap.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
 tests:  13|2
total_score: 50/70
145b254
Sun 10 Sep 2023 03:19:02 AM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:4:
hashmap.c: In function ‘firstMap’:
hashmap.c:140:19: error: expected expression before ‘;’ token
  140 |   map->current = -;
      |                   ^
Compilation failed
cf4e06b
Sun 10 Sep 2023 03:19:10 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  13|2
total_score: 50/70
ef075c2
Sun 10 Sep 2023 04:16:51 AM UTC: 
 hashmap.c | 12 +++++++++++-
 1 file changed, 11 insertions(+), 1 deletion(-)
 tests:  13|2
total_score: 50/70
373d6fb
Sun 10 Sep 2023 04:19:50 AM UTC: 
 hashmap.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  13|2
total_score: 50/70
7711605
Sun 10 Sep 2023 04:22:07 AM UTC: 
 hashmap.c | 9 +++++----
 1 file changed, 5 insertions(+), 4 deletions(-)
 tests:  13|2
total_score: 50/70
7660dc7
Sun 10 Sep 2023 04:27:22 AM UTC: 
 hashmap.c | 11 ++++++-----
 1 file changed, 6 insertions(+), 5 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘nextMap’:
hashmap.c:155:29: error: ‘current’ undeclared (first use in this function)
  155 |   long primerIndice = map-0>current;
      |                             ^~~~~~~
hashmap.c:155:29: note: each undeclared identifier is reported only once for each function it appears in
hashmap.c:159:22: error: ‘idnice’ undeclared (first use in this function); did you mean ‘indice’?
  159 |       map->current = idnice;
      |                      ^~~~~~
      |                      indice
Compilation failed
9e71360
Sun 10 Sep 2023 04:27:35 AM UTC: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  13|2
total_score: 50/70
21247e5
Sun 10 Sep 2023 04:27:48 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
f2f71dd
Sun 10 Sep 2023 04:31:19 AM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
234cca4
Sun 10 Sep 2023 04:31:31 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  13|2
total_score: 50/70
49de83e
Sun 10 Sep 2023 04:31:56 AM UTC: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘nextMap’:
hashmap.c:160:34: error: ‘Pair’ has no member named ‘indice’
  160 |       return map->buckets[indice]->indice;
      |                                  ^~
Compilation failed
eb99f41
Sun 10 Sep 2023 04:32:04 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  13|2
total_score: 50/70
0390bbc
Sun 10 Sep 2023 04:32:18 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  13|2
total_score: 50/70
24876b9
Sun 10 Sep 2023 04:34:12 AM UTC: 
 hashmap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  13|2
total_score: 50/70
e0e7e0a
Sun 10 Sep 2023 04:36:10 AM UTC: 
 hashmap.c | 9 ++++-----
 1 file changed, 4 insertions(+), 5 deletions(-)
 tests:  13|2
total_score: 50/70
d8334c1
Sun 10 Sep 2023 04:38:39 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  13|2
total_score: 50/70
1b0d151
Sun 10 Sep 2023 04:44:38 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  14|2
total_score: 50/70
4094160
Sun 10 Sep 2023 04:46:10 AM UTC: 
 hashmap.c | 14 +++++++-------
 1 file changed, 7 insertions(+), 7 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘nextMap’:
hashmap.c:156:8: error: unused variable ‘i’ [-Werror=unused-variable]
  156 |   long i = 0;
      |        ^
cc1: all warnings being treated as errors
Compilation failed
54e4078
